src/lexer/out/y.output
   0  $accept : instructions $end

   1  instructions : instr SEMI instructions
   2               | instr SEMI

   3  instr : COMMENT AT IDENT variable
   4        | COMMENT AT IDENT
   5        | COMMENT AT

   6  variable : IDENT COMMA variable
   7           | IDENT

state 0
	$accept : . instructions $end  (0)

	COMMENT  shift 1
	.  error

	instructions  goto 2
	instr  goto 3


state 1
	instr : COMMENT . AT IDENT variable  (3)
	instr : COMMENT . AT IDENT  (4)
	instr : COMMENT . AT  (5)

	AT  shift 4
	.  error


state 2
	$accept : instructions . $end  (0)

	$end  accept


state 3
	instructions : instr . SEMI instructions  (1)
	instructions : instr . SEMI  (2)

	SEMI  shift 5
	.  error


state 4
	instr : COMMENT AT . IDENT variable  (3)
	instr : COMMENT AT . IDENT  (4)
	instr : COMMENT AT .  (5)

	IDENT  shift 6
	SEMI  reduce 5


state 5
	instructions : instr SEMI . instructions  (1)
	instructions : instr SEMI .  (2)

	COMMENT  shift 1
	$end  reduce 2

	instructions  goto 7
	instr  goto 3


state 6
	instr : COMMENT AT IDENT . variable  (3)
	instr : COMMENT AT IDENT .  (4)

	IDENT  shift 8
	SEMI  reduce 4

	variable  goto 9


state 7
	instructions : instr SEMI instructions .  (1)

	.  reduce 1


state 8
	variable : IDENT . COMMA variable  (6)
	variable : IDENT .  (7)

	COMMA  shift 10
	SEMI  reduce 7


state 9
	instr : COMMENT AT IDENT variable .  (3)

	.  reduce 3


state 10
	variable : IDENT COMMA . variable  (6)

	IDENT  shift 8
	.  error

	variable  goto 11


state 11
	variable : IDENT COMMA variable .  (6)

	.  reduce 6


7 terminals, 4 nonterminals
8 grammar rules, 12 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  COMMENT
     3    258  IDENT
     4    259  AT
     5    260  COMMA
     6    261  SEMI
     7    262  $accept
     8    263  instructions
     9    264  instr
    10    265  variable
